--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,10 @@
             <artifactId>log4j-core</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 </project>
