--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>LATEST</version>
+                <version>2.2.0.RELEASE</version>
             </plugin>
         </plugins>
     </build>
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>LATEST</version>
+            <version>2.2.1.RELEASE</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
