--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>edu.urgu.oopteam</groupId>
     <artifactId>TelegramBot</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
