--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
                 <configuration>
                     <reuseForks>false</reuseForks>
                     <forkCount>1</forkCount>
+                    <runOrder>alphabetical</runOrder>
                 </configuration>
             </plugin>
         </plugins>
@@ -163,12 +164,6 @@
             <artifactId>spring-boot-test</artifactId>
             <version>2.2.0.RELEASE</version>
             <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M4</version>
         </dependency>
     </dependencies>
 </project>
